kubernetes/base/foundryvtt/dracomir-control/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dracomir-control
spec:
  selector:
    app.kubernetes.io/name: dracomir-control
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
