kubernetes/base/foundryvtt/dracomir-control/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dracomir-control
spec:
  hostnames:
    - "dracomir-control.${SECRET_DOMAIN}"
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - backendRefs:
        - name: dracomir-control
          port: 80
